2004-05-09 Johannes Weiner <hnaz@we-are-root.org>
	* DETAILS: Updated to 0.9.9

2004-05-09 Johannes Weiner <hnaz@we-are-root.org>
	* DETAILS: Fixed CVS server

2004-04-05 Johannes Weiner <hnaz@we-are-root.org>
	* DETAILS: Added CVS-support
	* BUILD: Same reason as above
	* DEPENDS: Changed the wallpaper-viewer
	* PREPARE: Added because of CVS

2004-01-15 Eric Sandall <eric@sandall.us>
	* DETAILS: Updated to 0.9.8 (fixes a memory leak in 0.9.7)

2004-01-06 Eric Sandall <eric@sandall.us>
	* DETAILS: Updated to 0.9.7
	  Removed MAINTAINER
	  Removed Source Mage mirror (Sorcery now falls back to it)
	  Moved SourceForge mirror to the first URL

2003-11-17 Eric Sandall <eric@sandall.us>
	* DETAILS: Updated to 0.9.6
	  Removed extraneous MD5's

2003-10-10 hgg <hgreig@bigpond.net.au>
	* DEPENDS: Change x11-libs to X11-LIBS

2003-10-03 hgg <hgreig@bigpond.net.au>
	* DEPENDS: Change requires x11-libs to depends x11-libs

2003-09-16 hgg <hgreig@bigpond.net.au>
	* DEPENDS: Add requires x11-libs

2003-09-09 Eric Schabell <eschabell@sourcemage.org>
	* DETAILS: Version bump to the newest, tested and submitted by
	  basvg@cs.kun.nl.

2003-08-23 Eric Sandall <eric@sandall.us>
	* DEPENDS: Added xfree86 as dependency (Bug #4080)
	* HISTORY: Cleaned up HISTORY

2003-07-30 Tom Garland <tgarland@email.com>
	* DETAILS: Version bumped to 0.9.4.

2002-12-18 Tom Garland <tgarland@email.com>
	* DETAILS: Fixed bug 1757, DETAILS formatting.

2002-12-09 Tom Garland <tgarland@email.com>
	* DETAILS: Version bump to 0.1.14

2002-11-20 Laurent Wandrebeck <wandre.l@free.fr>
	* DETAILS: Version bump to 0.1.13.

2002-10-14 Laurent Wandrebeck <wandre.l@free.fr>
	* DETAILS: Added SMGL Mirror URL.

2002-09-15 Laurent Wandrebeck <wandre.l@free.fr>
	* DETAILS: Version update to fix bug #979
	  Make use of $SOURCEFORGE_URL

2002-09-06 Eric Schabell <eric@schabell.com>
	* DETAILS: Version update to fix bug #881.

2002-08-21 Laurent Wandrebeck <wandre.l@free.fr>