@@ -1,8 +1,11 @@
 (
+
     export CPPFLAGS=-I/usr/include/freetype2	&&
 
 if [ "$CVS" = "yes" ]; then
     ./autogen.sh
+else
+    patch  -p0  <  $SCRIPT_DIRECTORY/fluxbox-0.9.9-gcc3.4.patch
 fi &&
 
 if [ "$NLS" = "no" ]; then
