@@ -11,7 +11,7 @@ else
           SOURCE=$SPELL-$VERSION.tar.bz2
 SOURCE_DIRECTORY=$BUILD_DIRECTORY/$SPELL-$VERSION
    SOURCE_URL[0]=$SOURCEFORGE_URL/$SPELL/$SOURCE
-          MD5[0]=b96f9b23b6605274bf0f7c3f84d080f1
+          MD5[0]=84dbd936c13befe9192563f41cd263fc
 fi
         WEB_SITE=http://www.fluxbox.org
          ENTERED=20011210
