@@ -1,0 +1,26 @@
+Index: src/FbTk/FbPixmap.hh
+===================================================================
+RCS file: /cvsroot/fluxbox/fluxbox/src/FbTk/FbPixmap.hh,v
+retrieving revision 1.10
+retrieving revision 1.11
+diff -r1.10 -r1.11
+22c22
+< // $Id: FbPixmap.hh,v 1.10 2004/01/11 12:48:46 fluxgen Exp $
+---
+> // $Id: FbPixmap.hh,v 1.11 2004/04/26 21:57:32 fluxgen Exp $
+38c38
+<     explicit FbPixmap(const FbPixmap &copy);
+---
+>     FbPixmap(const FbPixmap &copy);
+Index: src/FbTk/Resource.hh
+===================================================================
+RCS file: /cvsroot/fluxbox/fluxbox/src/FbTk/Resource.hh,v
+retrieving revision 1.7
+retrieving revision 1.8
+diff -r1.7 -r1.8
+22c22
+< // $Id: Resource.hh,v 1.7 2003/12/19 18:25:39 fluxgen Exp $
+---
+> // $Id: Resource.hh,v 1.8 2004/04/26 22:19:09 fluxgen Exp $
+34a35
+> #include "XrmDatabaseHelper.hh"
