@@ -1,3 +1,7 @@
+2004-05-15 Arwed v. Merkatz <v.merkatz@gmx.net>
+	* DETAILS: fixed MD5 sum
+	* BUILD, fluxbox-0.9.9-gcc3.4.patch: added patch
+
 2004-05-09 Johannes Weiner <hnaz@we-are-root.org>
 	* DETAILS: Updated to 0.9.9
 
